# cmake-4.0.1-tutorial-source

./: .gitlab-ci.yml  README.md  test.sh
.github/workflows/: ci.yml
Step1/: CMakeLists.txt  test.sh  tutorial.cxx
Step10/: CMakeLists.txt  test.sh
Step10/MathFunctions/: CMakeLists.txt
Step11/: CMakeLists.txt
Step11/MathFunctions/: CMakeLists.txt
Step12/: CMakeLists.txt  test.sh
Step12/_CPack_Packages/Linux/TGZ/Tutorial-1.0-Linux/lib/: libMathFunctions.so.1.0.0  libMathFunctionsd.so.1.0.0
Step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutoriald  cmake_install.cmake  install_manifest.txt  libMathFunctionsd.so.1.0.0
Step12/debug/MathFunctions/: Makefile  cmake_install.cmake
Step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake  install_manifest.txt  libMathFunctions.so.1.0.0
Step12/release/MathFunctions/: Makefile  cmake_install.cmake
Step12/release/Testing/Temporary/: CTestCostData.txt
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step3/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt  readme.md  test.sh  tutorial.cxx
Step5/: CMakeLists.txt  test.sh
Step7/: test.sh
Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step8/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step9/: test.sh
